--- a/demos/dashboards-rna-news/demo.css
+++ b/demos/dashboards-rna-news/demo.css
@@ -6,6 +6,14 @@ body {
   font-family: "Helvetica Neue", Helvetica, "Segoe UI", Arial, sans-serif;
 }
 
+#postman-message {
+  display: none;
+}
+
+#loading-label {
+  display: none;
+}
+
 .row {
   display: flex;
   flex-wrap: wrap;
